[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = "1.0.81"
schemars = "0.8.10"
anyhow = { version = "1.0.57", features = ["backtrace"] }
cosmwasm-std = { version = "1.0.0" }
cw20-base = { version = "0.13.4", features = ["library"] }
cw721-base = { version = "0.13.4", features = ["library"] }
cw721 = "0.13.4"
cw20 = "0.13.4"
testing-base = {path = "../packages/testing-base"}
token = {path = "../contracts/token"}
pair = {path = "../contracts/pair"}
ysip = {path = "../packages/ysip"}
ico = {path = "../contracts/ico"}
cw-multi-test = "0.13.4"


[dev-dependencies]

