[package]
name = "pair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = {version = "0.13.4", features = ["library"]}
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
cw-storage-plus = "0.13.4"
cw-utils = "0.13.4"
ysip = { path = "../../packages/ysip", default-features = false }

[dev-dependencies]
cosmwasm-vm = { version = "1.0", default-features = false, features = ["iterator"] }

